<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item   android:id="@+id/menu_search"
            android:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/menu_search"/>

    <item   android:id="@+id/menu_barcode"
            android:showAsAction="ifRoom"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_barcode"/>

    <item android:id="@+id/menu_genres"
          android:title="@string/genres"
          android:orderInCategory="100"
          android:showAsAction="never" />

    <item android:id="@+id/menu_platforms"
          android:title="@string/platform"
          android:orderInCategory="101"
          android:showAsAction="never" />

    <item android:id="@+id/menu_settings"
          android:title="@string/settings"
          android:orderInCategory="102"
          android:showAsAction="never" />

</menu>
